--- a/index.html
+++ b/index.html
@@ -4,8 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Library</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/style/style.css">
 </head>
-<body>
-  
+<body class="text-center m-5">
+  <div class="badge badge-primary px-5 m-5">
+    <h1 >Library</h1>
+  </div>
+  <section>
+    <div class="badge badge-warning px-4 m-3">
+      <h4 >Add your favorite book to the library!</h2>
+    </div>
+    <form class="d-flex flex-column w-50 m-auto" action="">
+
+      <label for="title">Title</label>
+      <input type="text" name="title" id="title" placeholder="Add Title" required> 
+
+      <label for="author">Author</label>
+      <input type="text" name="author" id="author" placeholder="Add Author" required>
+
+      <label for="pages">Pages</label>
+      <input type="number" name="pages" id="pages" placeholder="Add Pages" required>
+
+      <div>
+        <input type="radio" name="read" id="read_true" value="true">
+      <label for="read_true">I have read this book</label>
+    </div>
+    <div>
+      <input type="radio" name="read" id="read_false" value="false">
+      <label for="read_false">I have not read this book</label>
+    </div>
+      <button type="submit" class="btn btn-success" id="submit">Add Book</button>
+
+    </form>
+  </section>
+
+  <section>
+    
+  </section>
+  <script src="assets/script/script.js" type="javascript"></script>
 </body>
 </html>
