Add render function

--- a/index.html
+++ b/index.html
@@ -40,8 +40,15 @@
   </section>
 
   <section>
-    
+    <table id="library">
+      <tr>
+        <th>Title</th>
+        <th>Author</th>
+        <th>Pages</th>
+        <th>Read</th>        
+      </tr>
+    </table>  
   </section>
-  <script src="assets/script/script.js" type="javascript"></script>
+  <script src="assets/script/script.js" type="text/javascript"></script>
 </body>
 </html>
