Add book adding functionality

--- a/index.html
+++ b/index.html
@@ -51,10 +51,13 @@
           <label for="read_true">I have read this book</label>
         </div>
         <div>
-          <input type="radio" name="read" id="read_false" value="false">
+          <input type="radio" name="read" id="read_false" value="false" checked>
           <label for="read_false">I have not read this book</label>
         </div>
-          <button type="submit" class="btn btn-success" id="submit">Add Book</button>
+          <div class="btn btn-success" id="submit">
+            Add Book
+          </div>
+
 
         </form>
       </section>
