Add change read status button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
               <th scope="col">TITLE</th>
               <th scope="col">AUTHOR</th>
               <th scope="col">PAGES</th>
-              <th scope="col">READ</th>
+              <th scope="col">CHANGE READ STATUS</th>
+              <th scope="col">READ?</th>
               <th scope="col">REMOVE BOOK</th>
             </tr>
           </thead>
