Add sript2.js to index.html

--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
   </div>
 
 </main>
-  <script src="assets/script/script.js" type="text/javascript"></script>
+  <script src="assets/script/script2.js" type="text/javascript"></script>
 </body>
 </html>
