--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   </div>
 
 </main>
-  <script src="assets/script/script.js" type="text/javascript"></script>
+<script src="assets/script/script.js" type="text/javascript"></script>
+<script src="assets/script/dom.js" type="text/javascript"></script>
 </body>
 </html>
